--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                             <Link class="nav-link reg-txt" to="/testimonials">TESTIMONIALS</Link>
                         </li>
                         <li class="nav-item mx-auto logo">
-                           <a href=""><img className="logo" src="https://reverent-tereshkova-d9f1bb.netlify.com/static/media/logo.d33ec1f1.png" /></a>
+                           <a href=""><img class="logo" src="https://reverent-tereshkova-d9f1bb.netlify.com/static/media/logo.d33ec1f1.png" /></a>
                         </li>
                         <li class="nav-item mx-auto">
                             <Link class="nav-link reg-txt" to="/location">LOCATIONS</Link>
